feat: Add search functionality

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  --background: #F9FAFC;
+  --background: #E9E9E9;
   --main-green: #79CD3A;
   --main-dark-green: #66AC28;
 
