--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,21 @@
   line-height: 1.5;
   font-weight: 400;
 
-  --background: #E9E9E9;
+  --background: #0f0f0f;
   --main-green: #79CD3A;
   --main-dark-green: #66AC28;
 
-  color: black;
+  color: white;
   background-color: var(--background);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@layer components {
+  .styled_black {
+    @apply bg-dark border border-lighter_dark hover:bg-lighter_dark transition-all;
+  }
 }
